--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ body {font-family: "Lato", sans-serif}
             </div>
             <div class="w3-half">
               <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
+              <input class="w3-input w3-border" type="file" name="fileToUpload" id="fileToUpload">
             </div>
           </div>
           <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
